# Serverus

./: .gitignore  AnomalyDetector.cpp  AnomalyDetector.h  AutoEncoder.cpp  AutoEncoder.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Cluster.cpp  Cluster.h  Config.py  DatabaseManager.py  Defender.py  Element.cpp  Element.h  Entity.py  Event.py  FeatureExtractor.cpp  FeatureExtractor.h  FeatureMapper.cpp  FeatureMapper.h  IncStats.cpp  IncStats.h  IncStatsData.cpp  IncStatsData.h  IncStatsDataChannel.cpp  IncStatsDataChannel.h  IncStatsDataSocket.cpp  IncStatsDataSocket.h  Log.py  Neuron.cpp  Packet.cpp  Packet.h  Packet.py  PacketsReader.cpp  PacketsReader.h  PacketsReaderCSV.cpp  PacketsReaderCSV.h  PacketsReaderSQLITE.cpp  PacketsReaderSQLITE.h  (+30 more)
DefenderComponent/: Configuration.json  Defender.py  Event.py  Log.py
General-Server/: Config.py  DatabaseManager.py  Defender.py  Event.py  Server.py  TestServer.py
Headers/: AnomalyDetector.h  AutoEncoder.h  Communicator.h  Event.h  FeatureExtractor.h  IncStatsData.h  Neuron.h  Packet.h  PacketsReader.h  PacketsReaderCSV.h  PacketsReaderSQLITE.h  Parser.h  Time.h  utils.h
ModelComponent/: build.sh
ServerComponent/: Config.py  DatabaseManager.py  Defender.py  Event.py  Log.py  Rule.py  Server.py  TestServer.py
SnifferComponent/: Packet.py  Sniffer.py  SnifferToMQ.py  SnifferToSqlite.py  requirements.txt
Sources/: AnomalyDetector.cpp  AutoEncoder.cpp  Cluster.cpp  Communicator.cpp  ConversationUtils.cpp  Event.cpp  FeatureExtractor.cpp  FeatureMapper.cpp  IncStats.cpp  IncStatsData.cpp  IncStatsDataChannel.cpp  (+11 more)
(+61 files in other folders)
